Implementando chamada p/ postCliente

--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -237,7 +237,7 @@
                         </p>
 
                         <div class="col-md-7">
-                            <button class="button primary">Salvar</button>
+                            <button onclick="postClient()" class="button primary">Salvar</button>
                         </div>
 
                         <div class="col-md-5">
