--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -29,6 +29,9 @@
 
         <form class="form" name="clientForm">
 
+            <input type="hidden" name="" id="sequencia">
+            <input type="hidden" name="" id="isContatos">
+
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="col-md-6">
@@ -159,7 +162,8 @@
 
                         <div class="col-md-3">
                             <label class="col-md-3 inputName" for="medicoUf">UF</label>
-                            <select class="col-md-8 input" type="text" id="medicoUf" onchange="searchCrm(this)">
+                            <input type="hidden" name="" id="medicoUf">
+                            <select class="col-md-8 input" type="text" id="medicoUfSelect" onchange="searchCrm(this)">
                                 <option value="0" selected="selected">Selecione</option>
                                 <option value="AC">AC</option>
                                 <option value="AL">AL</option>
