se cliente salvo com sucesso fechar a janela

--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="blockTitle">
-            <h1 class="pageTitle">Cadastro de cliente</h1>
+            <h1 class="pageTitle">Cadastro de cliente PBM - Programa da Indústria</h1>
         </div>
 
     </header>
