--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -260,6 +260,6 @@
 </body>
 
 <script src="mask.js"></script>
-<script src="/js/consulta.js"></script>
+<script src="consulta.js"></script>
 
 </html>
