Ajuste para o nginx ler o imagens e css

--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro Cliente PBMR</title>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <header>
 
         <div class="blockLogo">
-            <img src="/img/logoDrogasil.png" alt="Drogasil" class="logoImg">
+            <img src="logoDrogasil.png" alt="Drogasil" class="logoImg">
         </div>
 
         <div class="blockTitle">
