--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
 
+<script type="text/javascript" src="jquery-1.5.1.min.js"></script>
+<script type="text/javascript" src="jquery-ui.min.js"></script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
