--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -40,23 +40,27 @@
                     <div class="col-md-6">
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="nome">Nome</label>
-                            <input class="col-md-7 input" type="text" id="nome" name="nome" required>
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <input class="col-md-7 input" type="text" id="nome" name="nome">
+                            <p id="errorMessageNome" class="errorMessage" ></p>
                         </div>
 
                         <div class="row space bottom">
-                            <label class="col-md-4 inputName" for="cpf">CPF</label>
+                            <label class="col-md-4 inputName" for="cpf">CPF</label>                            
                             <input class="col-md-7 input" type="text" id="cpf">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageCpf" class="errorMessage"></p>
                         </div>
 
                         <div class="row space bottom">
-                            <label class="col-md-4 inputName" for="dataNascimento">Data de nascimento*</label>
-                            <input class="col-md-4 input" type="text" id="dataNascimento">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <div>
+                                <label class="col-md-4 inputName" for="dataNascimento">Data de nascimento*</label>
+                                <input class="col-md-4 input data-width" type="text" id="dataNascimento">                              
+                            </div>
+                            <div class="">
+                                <p id="errorMessageDataNascimento" class="errorMessage"></p>
+                            </div>
                         </div>
 
-                        <div class="row space bottom">
+                        <div class="row bottom">
                             <label class="col-md-4 inputName">Sexo</label>
 
                             <input type="hidden" name="" id="sexo">
@@ -67,33 +71,35 @@
                             <label for="sexoFeminino">Feminino</label>
                             <input type="checkbox" value="F" id="sexoFeminino">
 
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageSexo" class="errorMessage"></p>
                         </div>
 
-                        <div class="row space bottom">
+                        <!-- <div class="row space bottom">
                             <label class="col-md-4 inputName" for="cartaoPbm">Cartão PBM</label>
                             <input class="col-md-7 input" type="text" id="cartaoPbm">
-                            <p id="errorMessage" clas="errorMessage"></p>
-                        </div>
+                            <p id="errorMessage" class="errorMessage"></p>
+                        </div> -->
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="telefoneFixo">DDD/Tel*</label>
-                            <input class="col-md-2 input space right" type="text" id="dddFixo">
-                            <input class="col-md-5 input " type="text" id="telefoneFixo">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <input class="col-md-2 input space right ddd-width" type="text" id="dddFixo" size="2">
+                            <input class="col-md-5 input telefone-width" type="text" id="telefoneFixo">
+                            <p id="errorMessageDDDTelefoneFixo" class="errorMessage"></p>
+                            <p id="errorMessageTelefoneFixo" class="errorMessage"></p>
                         </div>
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="celular">DDD/Celular*</label>
-                            <input class="col-md-2 input space right" type="text" id="dddCelular">
-                            <input class="col-md-5 input" type="text" id="celular">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <input class="col-md-2 input space right ddd-width" type="text" id="dddCelular">
+                            <input class="col-md-5 input telefone-width" type="text" id="celular">
+                            <p id="errorMessageDDDTelefoneCelular" class="errorMessage"></p>
+                            <p id="errorMessageTelefoneCelular" class="errorMessage"></p>
                         </div>
 
-                        <div class="row space bottom">
+                        <div class="row space bottom mb5">
                             <label class="col-md-4 inputName" for="email">Email*</label>
                             <input class="col-md-7 input" type="text" id="email">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageEmail" class="errorMessage"></p>
                         </div>
 
                     </div>
@@ -103,44 +109,44 @@
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="rua">Endereço*</label>
                             <input class="col-md-7 input" type="text" id="rua">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageRua" class="errorMessage"></p>
                         </div>
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="complemento">Complemento*</label>
                             <input class="col-md-7 input" type="text" id="complemento">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessage" class="errorMessage"></p>
                         </div>
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="bairro">Bairro*</label>
                             <input class="col-md-7 input" type="text" id="bairro">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageBairro" class="errorMessage"></p>
                         </div>
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="cidade">Cidade*</label>
                             <input class="col-md-7 input" type="text" id="cidade">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageCidade" class="errorMessage"></p>
                         </div>
 
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="numero">Numero*</label>
                             <input class="col-md-4 input" type="text" id="numero">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageNumero" class="errorMessage"></p>
                         </div>
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="cep">CEP*</label>
                             <input class="col-md-4 input" type="text" id="cep">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageCep" class="errorMessage"></p>
                         </div>
 
                         <div class="row space bottom">
                             <label class="col-md-4 inputName" for="uf">UF*</label>
                             <input class="col-md-2   input" type="text" id="uf">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageUf" class="errorMessage"></p>
                         </div>
 
                     </div>
@@ -153,14 +159,14 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row pt10 pb5">
                 <div class="col-md-10 col-md-offset-1">
 
                     <div class="row">
                         <div class="col-md-3">
                             <label class="col-md-4 inputName" for="medicoCrm">CRM</label>
                             <input class="col-md-8 input" type="text" id="medicoCrm">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageMedicoCRM" class="errorMessage"></p>
                         </div>
 
                         <div class="col-md-3">
@@ -196,13 +202,13 @@
                                 <option value="SP">SP</option>
                                 <option value="TO">TO</option>
                             </select>
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageMedicoUf" class="errorMessage"></p>
                         </div>
 
                         <div class="col-md-6">
                             <label class="col-md-2 inputName" for="medicoNome">Nome</label>
                             <input class="col-md-9 input" type="text" id="medicoNome">
-                            <p id="errorMessage" clas="errorMessage"></p>
+                            <p id="errorMessageMedicoNome" class="errorMessage"></p>
                         </div>
                     </div>
 
@@ -230,7 +236,7 @@
                         <label for="checkCelular">Celular/SMS</label>
                         <input type="checkbox" id="checkCelular">
 
-                        <p id="errorMessage" clas="errorMessage"></p>
+                        <p id="errorMessage" class="errorMessage"></p>
 
                     </div>
 
@@ -240,7 +246,7 @@
                             <label for="checkAutorizacao">Autoriza a Indústria ou empresas parceiras autorizadas a entrar em contato para saber sua opinião sobre o
                                 programa, oferecer serviços gratuitos de apoio ao tratamento e realizar eventuais pesquisas?</label>
 
-                                <p id="errorMessage" clas="errorMessage"></p>
+                                <p id="errorMessage" class="errorMessage"></p>
                         </p>
 
                         <div class="col-md-7">
