Retirei validacao do campo Telefone fixo conforme alinhamento com o Daniel. Alterei a url do endpoint do medico para seguir o padrao de versionamento.

--- a/cadastroClientePbmr.html
+++ b/cadastroClientePbmr.html
@@ -81,7 +81,7 @@
                         </div> -->
 
                         <div class="row space bottom">
-                            <label class="col-md-4 inputName" for="telefoneFixo">DDD/Tel*</label>
+                            <label class="col-md-4 inputName" for="telefoneFixo">DDD/Tel</label>
                             <input class="col-md-2 input space right ddd-width" type="text" id="dddFixo" size="2">
                             <input class="col-md-5 input telefone-width" type="text" id="telefoneFixo">
                             <p id="errorMessageDDDTelefoneFixo" class="errorMessage"></p>
